# stack_box

./: Cargo.toml  LICENSE  README.md
examples/: auto_box.rs  basic.rs  cells.rs
src/: auto_box.rs  container.rs  error.rs  lib.rs  macros.rs  utils.rs
src/container/: check.rs  mod.rs
